<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/habitsFragment">

    <fragment
        android:id="@+id/habitsFragment"
        android:name="com.swaptech.habitstwo.listhabits.HabitsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_habits">

        <action
            android:id="@+id/action_habitsFragment_to_addFragment2"
            app:destination="@id/addFragment"
            app:enterAnim="@anim/fragment_open_enter" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.swaptech.habitstwo.navigation.AboutFragment"
        android:label="@string/about_item_nav_drawer"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.swaptech.habitstwo.actionwithhabit.AddFragment"
        android:label="@string/add_habit_title"
        tools:layout="@layout/fragment_add">


        <action
            android:id="@+id/action_addFragment_to_habitsFragment"
            app:destination="@id/habitsFragment"

            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_close_exit"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
</navigation>