<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_edit_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/period_of_exec_of_habit"
        app:layout_constraintStart_toEndOf="@+id/period_of_exec_of_habit">

        <EditText
            android:id="@+id/name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/sample_title"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/sample_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_entry" />

        <Spinner
            android:id="@+id/priority_entry_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/choose_periodicity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_entry" />

        <RadioGroup
            android:id="@+id/type_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_entry_fragment">

            <RadioButton
                android:id="@+id/type_good_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_radio_button" />

            <RadioButton
                android:id="@+id/type_bad_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_radio_button" />

        </RadioGroup>

        <EditText
            android:id="@+id/num_of_execs_of_habit_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="@string/sample_description"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_entry" />


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:text="@string/time_s_every"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/num_of_execs_of_habit_entry"
            app:layout_constraintStart_toEndOf="@id/num_of_execs_of_habit_entry" />


        <EditText
            android:id="@+id/period_of_exec_of_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="@string/sample_description"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/type_entry"
            app:layout_constraintStart_toEndOf="@id/tv1" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/days"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/num_of_execs_of_habit_entry"
            app:layout_constraintStart_toEndOf="@id/period_of_exec_of_habit" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/num_of_execs_of_habit_entry"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:scrollbars="none">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/color_1_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/green_color_picker"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:tag="@color/green_color_picker"
                        />
                    <Button
                        android:id="@+id/color_2_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/red_color_picker"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:tag="@color/red_color_picker"/>
                    <Button
                        android:id="@+id/color_3_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/cyan_color_picker"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:tag="@color/cyan_color_picker"/>
                    <Button
                        android:id="@+id/color_4_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/purple_500"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:tag="@color/purple_500" />
                    <Button
                        android:id="@+id/color_5_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/purple"
                        android:tag="@color/purple"/>
                    <Button
                        android:id="@+id/color_6_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_blue_color_picker"
                        android:tag="@color/light_blue_color_picker"/>
                    <Button
                        android:id="@+id/color_7_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_cyan_color_picker"
                        android:tag="@color/light_cyan_color_picker"/>
                    <Button
                        android:id="@+id/color_8_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/light_light_yellow_color_picker"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:tag="@color/light_light_yellow_color_picker"/>
                    <Button
                        android:id="@+id/color_9_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_light_brown_color_picker"
                        android:tag="@color/light_light_brown_color_picker"/>
                    <Button
                        android:id="@+id/color_10_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_light_green_color_picker"
                        android:tag="@color/light_light_green_color_picker"/>
                    <Button
                        android:id="@+id/color_11_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_pink_color_picker"
                        android:tag="@color/light_pink_color_picker"/>
                    <Button
                        android:id="@+id/color_12_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_orange_color_picker"
                        android:tag="@color/light_orange_color_picker"/>
                    <Button
                        android:id="@+id/color_13_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_purple_color_picker"
                        android:tag="@color/light_purple_color_picker"/>
                    <Button
                        android:id="@+id/color_14_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/light_yellow_color_picker"
                        android:tag="@color/light_yellow_color_picker"/>
                    <Button
                        android:id="@+id/color_15_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/teal_200"
                        android:tag="@color/teal_200"/>
                    <Button
                        android:id="@+id/color_16_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:background="@drawable/color_picker_item"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:backgroundTint="@color/teal_700"
                        android:tag="@color/teal_700"/>
                </GridLayout>

            </HorizontalScrollView>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_24"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/description_entry"
            app:layout_constraintTop_toBottomOf="@id/description_entry" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_complete_creating_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>